fix(weather): make weather icons better aligned
cloudy, sunny-cloudy and night-cloudy now look better aligned if shown
side-by-side

fixes #14

--- a/src/assets/styles/weather.css
+++ b/src/assets/styles/weather.css
@@ -99,6 +99,15 @@ section:not(.content, footer section) {
   margin-bottom: 2rem;
 }
 
+.loader {
+  max-width: 80vw;
+}
+
+.current-weather.loader {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+}
+
 .current-weather.content {
   /* display: flex;
   flex-wrap: wrap; */
